--- a/css/style.css
+++ b/css/style.css
@@ -397,11 +397,10 @@
     background-color: rgb(255, 255, 255);
   }
   .row  .verde  {
-   
     margin-top: 55px;
     border: solid 2px rgb(52, 22, 189);
     text-align: center;
-    background-color: greenyellow;
+    background-color: rgb(47, 255, 245);
   }
   
   /*jiiiiiiiiiii*/
